--- a/guiSettings.json
+++ b/guiSettings.json
@@ -3,5 +3,10 @@
         "x": 533,
         "y": 422,
         "s": 1
+    },
+    "FireFreezeNotifierLoc": {
+    "x": 0.5,
+    "y": 0.4,
+    "s": 1
     }
 }
