--- a/guiSettings.json
+++ b/guiSettings.json
@@ -1,12 +1,17 @@
 {
     "LegionLoc": {
-        "x": 533,
-        "y": 422,
+        "x": 528,
+        "y": 444,
         "s": 1
     },
     "FireFreezeNotifierLoc": {
-    "x": 0.5,
-    "y": 0.4,
-    "s": 1
+        "x": 0.5,
+        "y": 0.4,
+        "s": 1
+    },
+    "OldServerLoc": {
+        "x": 328,
+        "y": 518,
+        "s": 1
     }
 }
