--- a/guiSettings.json
+++ b/guiSettings.json
@@ -1,17 +1,22 @@
 {
     "LegionLoc": {
-        "x": 528,
-        "y": 444,
+        "x": 534,
+        "y": 445,
         "s": 1
     },
     "FireFreezeNotifierLoc": {
-        "x": 0.5,
-        "y": 0.4,
+        "x": 0,
+        "y": 100,
         "s": 1
     },
     "OldServerLoc": {
         "x": 328,
         "y": 518,
+        "s": 1
+    },
+    "testOverlayLoc": {
+        "x": 100,
+        "y": 100,
         "s": 1
     }
 }
